2025-05-21  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/bioclimate_std.C
	(deposition): Made it a list.

	* src/daisy/upper_boundary/weather/deposition.C
	(DepositionGundersen): Delete model.
	(const): New model.

2025-05-19  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_Python.C (extra): New parameter.

2025-04-25  Per Abrahamsen  <pa@plen.ku.dk>

	* CMakeLists.txt (VERSION): 7.0.9.

	* src/daisy/chemicals/denprod_Parton1996.C (split): Use M, not
	C. Thanks Tobias Kloffel.

2025-03-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/column_std.C (OrganicMatter): Make 'SOM2025' default.
	* src/daisy/organic_matter/organic_std.C (SOM2000, SOM2025): New
	parameterization.
	(default): Don't give 'smb' a default value.
	* src/daisy/organic_matter/bioincorporation.C (respiration): Set
	to zero by default.

2025-03-04  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/adsorption.h:
	* src/daisy/chemicals/adsorption.C (M_to_C_bisect):
	New function.
	* src/daisy/chemicals/adsorption_Python.C (M_to_C): Use
	'M_to_C_bisect' if no Python function is specified.

2025-03-03  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/reaction_Python.C: New model.
	* src/daisy/chemicals/CMakeLists.txt: Add it.

2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/reaction.h:
	* include/daisy/chemicals/chemistry.h (initialize): Take
	'chemistry' parameter.

2025-02-10  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/resistance.C
	(Resistance::T_c): Fix parenthesis.

2025-01-29  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/stomatacon_SHA.C (MNA): Mark obsolete.

	* src/daisy/crop/root/rubiscoNdist_DPF.C (f_photo): Removed
	parameter, redundant as cropN is already set to rubiscoN.

	* src/daisy/upper_boundary/bioclimate/difrad_DPF.C (fa): Fix
	default value and description.

	* src/daisy/upper_boundary/vegetation/vegetation_crops.C
	(LAIvsDAY): Switch domain and range.
