@@ -57,6 +57,17 @@
 % Section *: New stuff
 % **********************************************************************
 
+@article{brusseau2023,
+  title={Determining air-water interfacial areas for the retention and transport of PFAS and other interfacially active solutes in unsaturated porous media},
+  author={Mark L Brusseau},
+  journal={Science of The Total Environment},
+  volume={884},
+  pages={163730},
+  year={2023},
+  doi={10.1016/j.scitotenv.2023.163730},
+  publisher={Elsevier}
+}
+
 @article{van1963potassium,
   title={Potassium-exchange behaviour of an illite.},
   author={Van Schouwenburg, JCH and Schuffelen, AC},
