@@ -1,3 +1,7 @@
+2025-05-23  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/chemicals/awi.C: New component.
+
 2025-05-21  Per Abrahamsen  <pa@plen.ku.dk>
 
 	* src/daisy/upper_boundary/bioclimate/bioclimate_std.C
